--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,7 @@
     "client": "npm start --prefix ../frontend",
     "dev": "concurrently --kill-others-on-fail \"npm run server-dev\" \"npm run client\"",
     "seed:data": "node seeder/seeder",
-    "seed:data-d": "node seeder/seeder -d",
-    "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
+    "seed:data-d": "node seeder/seeder -d"
   },
   "author": "",
   "license": "ISC",
