--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,11 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^5.0.0",
+    "@types/express-fileupload": "^1.5.1",
+    "@types/jsonwebtoken": "^9.0.7",
     "concurrently": "^9.0.0",
     "nodemon": "^3.1.5"
   }
