--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.17.1",
+    //"ajv": "^8.17.1",
     "axios": "^1.7.7",
-    "backend": "file:..",
+    //"backend": "file:..",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "js-image-zoom": "^0.7.0", 
@@ -52,7 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
+  }
+}
+/*,
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "keywords": [],
@@ -62,3 +64,4 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
+*/
