--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,26 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
-    "@paypal/paypal-js": "^8.1.2",
+    "@paypal/paypal-js": "^8.1.2", 
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    //"ajv": "^8.17.1",
+    "ajv": "^8.17.1",
     "axios": "^1.7.7",
-    //"backend": "file:..",
+    "backend": "file:..",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "js-image-zoom": "^0.7.0", 
+    "js-image-zoom": "^0.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.3",
-    "react-router-dom": "^6.26.1", 
+    "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^4.0.5",
     "recharts": "^2.12.7",
@@ -52,16 +53,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-}
-/*,
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-router-bootstrap": "^0.26.6"
   }
 }
-*/
