--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
-    "@paypal/paypal-js": "^8.1.2", 
+    "@paypal/paypal-js": "^8.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -61,6 +61,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/js-image-zoom": "^0.7.4",
     "@types/react-router-bootstrap": "^0.26.6"
   }
 }
